This is the change log for the MITK-ProjectTemplate

Changes since version 1.1.0
======================================================================

- Removed direct QmitkStdMultiWidget dependencies

- Added gcc linker flag --as-needed to get same behavior as  on Windows

- Improved MITK superbuild configuration options


Changes since version 1.0.0
======================================================================

- Added support for plug-in validation for applications.

- Fixed broken make job server support when starting the inner
  project build.

- Small CMake cleanups

- Fixed user manual for the my.awesomeproject.exampleplugin plugin.
  (contributed by Miklos Espak)

- Added new plugin demonstrating how to write a custom BlueBerry
  application plugin containing Workbench advisor classes.
  (contributed by Miklos Espak)

- Clean the project-specific module conf directory and add the dir
  to the global CMake variable holding all module conf dirs.