@@ -1,4 +1,5 @@
 set(PROJECT_PLUGINS
   Plugins/my.awesomeproject.exampleplugin:ON
   Plugins/my.awesomeproject.exampleapp:OFF
+  Plugins/my.awesomeproject.renderwindoweditor:OFF
 )
