@@ -1,0 +1,8 @@
+PROJECT(my_awesomeproject_renderwindoweditor)
+
+MACRO_CREATE_MITK_CTK_PLUGIN(
+  EXPORT_DIRECTIVE MY_AWESOMEPROJECT_RENDERWINDOWEDITOR
+  EXPORTED_INCLUDE_SUFFIXES src
+  MODULE_DEPENDENCIES Qmitk
+  SUBPROJECTS MITK-CoreUI
+  )
