@@ -1,0 +1,13 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<?eclipse version="3.0"?>
+<plugin>
+  <extension point="org.blueberry.ui.editors">
+    <editor
+      id="my.awesomeproject.editors.renderwindow"
+      name="Awesome Render Window"
+      default="true"
+      extensions="mitk"
+      class="QmitkAwesomeRenderWindowEditor">
+    </editor>
+  </extension>
+</plugin>
