@@ -1,0 +1,92 @@
+/*=========================================================================
+
+Program:   Medical Imaging & Interaction Toolkit
+Language:  C++
+Date:      $Date$
+Version:   $Revision$
+
+Copyright (c) German Cancer Research Center, Division of Medical and
+Biological Informatics. All rights reserved.
+See MITKCopyright.txt or http://www.mitk.org/copyright.html for details.
+
+This software is distributed WITHOUT ANY WARRANTY; without even
+the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR
+PURPOSE.  See the above copyright notices for more information.
+
+=========================================================================*/
+
+#ifndef QmitkAwesomeRenderWindowEditor_H_
+#define QmitkAwesomeRenderWindowEditor_H_
+
+#include <QmitkAbstractRenderEditor.h>
+
+class QmitkRenderWindow;
+
+class QmitkAwesomeRenderWindowEditor : public QmitkAbstractRenderEditor
+{
+  Q_OBJECT
+
+public:
+
+  berryObjectMacro(QmitkAwesomeRenderWindowEditor)
+
+  static const std::string EDITOR_ID;
+
+  QmitkAwesomeRenderWindowEditor();
+
+
+  // -------------------  mitk::IRenderWindowPart  ----------------------
+
+  /**
+   * \see mitk::IRenderWindowPart::GetActiveRenderWindow()
+   */
+  QmitkRenderWindow* GetActiveRenderWindow() const;
+
+  /**
+   * \see mitk::IRenderWindowPart::GetRenderWindows()
+   */
+  QHash<QString,QmitkRenderWindow*> GetRenderWindows() const;
+
+  /**
+   * \see mitk::IRenderWindowPart::GetRenderWindow(QString)
+   */
+  QmitkRenderWindow* GetRenderWindow(const QString& id) const;
+
+  /**
+   * \see mitk::IRenderWindowPart::GetSelectionPosition()
+   */
+  mitk::Point3D GetSelectedPosition(const QString& id = QString()) const;
+
+  /**
+   * \see mitk::IRenderWindowPart::SetSelectedPosition()
+   */
+  void SetSelectedPosition(const mitk::Point3D& pos, const QString& id = QString());
+
+  /**
+   * \see mitk::IRenderWindowPart::EnableDecorations()
+   */
+  void EnableDecorations(bool enable, const QStringList& decorations = QStringList());
+
+  /**
+   * \see mitk::IRenderWindowPart::IsDecorationEnabled()
+   */
+  bool IsDecorationEnabled(const QString& decoration) const;
+
+  /**
+   * \see mitk::IRenderWindowPart::GetDecorations()
+   */
+  QStringList GetDecorations() const;
+
+protected:
+
+  void SetFocus();
+
+  void CreateQtPartControl(QWidget* parent);
+
+private:
+
+  QmitkRenderWindow* m_RenderWindow;
+
+};
+
+#endif /*QmitkAwesomeRenderWindowEditor_H_*/
