@@ -3,6 +3,8 @@ This is the change log for the MITK-ProjectTemplate
 Changes since version 1.1.0
 ======================================================================
 
+- Added an example render window editor
+
 - Removed direct QmitkStdMultiWidget dependencies
 
 - Added gcc linker flag --as-needed to get same behavior as  on Windows
